--- a/42barcelona/cell02/ex01/menu1.css
+++ b/42barcelona/cell02/ex01/menu1.css
@@ -1,29 +1,38 @@
-body {
 
-background-color:black;
+body {
+	margin: 0 auto;
+	text-align:center;
+	background-color:rgb(0, 0, 0);
+	color: white;
+	font-family: cursive, sans-serif;
 
 } 
 
-.menuCSS3 ul {
-		display: flex;
-		padding: 0;
-		margin: 0;
-		list-style: none;
-	}
-.menuCSS3 a {
-		display: block;
-		padding: 2em;
-		background-color: #F9B53C;
-		text-decoration: none;
-		color: #191C26;
+
+.menuCSS3  {
+	display: flex;
+	align-items: center;
+	align-self: center;
+	justify-content: center;
+	padding: 4em;
+	margin: 0 auto;
+	width: 170px;
+	list-style-type:georgian;
+	background-color: #938367;
+	border: 2px solid white;
 }
-.menuCSS3 a:hover {
-		background-color: #CC673B;
+
+
+.menuCSS3 select  {
+	background-color:rgb(223, 189, 87);
+	font-family: cursive, sans-serif;
+	outline: 0;
+	border: 0px solid rgb(17, 15, 15);
+	padding: 4px;
+	margin-top: 10px;
+	border-radius: 9px;
+
 }
-.menuCSS3 ul li ul {
-		display: none;
-}
-.menuCSS3 ul li a:hover + ul, .menuCSS3 ul li ul:hover {
-		display: block;
-}
+
+
 
